[package]
name = "trustify-ingestors"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
trustify-common = { path = "../common"}
trustify-graph = { path = "../graph"}
trustify-entity = { path = "../entity" }

serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.114"
chrono = { version = "0.4.35", features = ["serde"] }
tokio = { version = "1.30.0", features = ["full"] }
thiserror = "1.0.58"
anyhow = "1.0.72"
log = "0.4.19"
env_logger = "0.10.0"
reqwest = "0.11"
ring = "0.17.8"
hex = "0.4.3"
csaf = "0.5.0"
sha2 = "0.10.8"

[dev-dependencies]
test-log = { version = "0.2.15", features = ["env_logger", "trace"] }


