[package]
name = "trustify-ingestors"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
trustify-common = { path = "../common"}
trustify-graph = { path = "../graph"}
trustify-entity = { path = "../entity" }

anyhow = "1.0.72"
chrono = { version = "0.4.35", features = ["serde"] }
csaf = "0.5.0"
env_logger = "0.11.0"
hex = "0.4.3"
humantime = "2"
log = "0.4.19"
reqwest = "0.11"
ring = "0.17.8"
sea-orm = "*"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.114"
sha2 = "0.10.8"
thiserror = "1.0.58"
tokio = { version = "1.30.0", features = ["full"] }

[dev-dependencies]
test-log = { version = "0.2.15", features = ["env_logger", "trace"] }


