[package]
name = "trustify-integration-tests"
version = "0.1.0-alpha.5"
edition = "2021"

[dev-dependencies]
trustify-module-ingestor = { workspace = true }
trustify-module-fundamental = { workspace = true }
trustify-entity = { workspace = true }
trustify-common = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
rust-lzma = { workspace = true }
log = { workspace = true }
humantime = { workspace = true }
anyhow = { workspace = true }
cyclonedx-bom = { workspace = true }
spdx-rs = { workspace = true }
test-context = { workspace = true }
test-log = { workspace = true, features = ["log", "trace"] }
