[package]
name = "trustify-integration-tests"
version = "0.1.0-alpha.8"
edition = "2021"

[dev-dependencies]
trustify-common = { workspace = true }
trustify-entity = { workspace = true }
trustify-module-fundamental = { workspace = true }
trustify-module-ingestor = { workspace = true }
trustify-module-storage = { workspace = true }

anyhow = { workspace = true }
bytes = { workspace = true }
cyclonedx-bom = { workspace = true }
humantime = { workspace = true }
log = { workspace = true }
rust-lzma = { workspace = true }
serde_json = { workspace = true }
spdx-rs = { workspace = true }
test-context = { workspace = true }
test-log = { workspace = true, features = ["log", "trace"] }
tokio = { workspace = true }
tracing = { workspace = true }
