[package]
name = "trustify-migration"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
sea-orm-migration = { workspace = true, features = ["runtime-tokio-rustls", "sqlx-postgres", "with-uuid"] }
tokio = { workspace = true, features = ["full"] }
trustify-cvss = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
trustify-common = { workspace = true }
trustify-entity = { workspace = true }
trustify-test-context = { workspace = true }
test-context = { workspace = true }
test-log = { workspace = true, features = ["log", "trace"] }
tokio-util = { workspace = true }
anyhow = { workspace = true }
