[package]
name = "trustify-migration"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
trustify-common = { workspace = true }
trustify-entity = { workspace = true }
trustify-module-storage = { workspace = true }

bytes = { workspace = true }
futures-util = { workspace = true }
anyhow = { workspace = true }
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true, features = ["runtime-tokio-rustls", "sqlx-postgres", "with-uuid"] }
serde-cyclonedx = { workspace = true }
serde_json = { workspace = true }
spdx-rs = { workspace = true }
tokio = { workspace = true, features = ["full"] }
uuid = { workspace = true, features = ["v5"] }

[dev-dependencies]
trustify-common = { workspace = true }
trustify-db = { workspace = true }
trustify-entity = { workspace = true }
trustify-test-context = { workspace = true }

anyhow = { workspace = true }
test-context = { workspace = true }
test-log = { workspace = true, features = ["log", "trace"] }
tokio-util = { workspace = true }
