[package]
name = "trustify-server"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
trustify-auth = { workspace = true }
trustify-common = { workspace = true }
trustify-infrastructure = { workspace = true }
trustify-module-fundamental = { workspace = true }
trustify-module-importer = { workspace = true }
trustify-module-ingestor = { workspace = true }
trustify-module-storage = { workspace = true }
trustify-module-ui = { workspace = true }
trustify-module-graphql = { workspace = true }
trustify-module-analysis = { workspace = true }

actix-web = { workspace = true }
anyhow = { workspace = true }
build-info = { workspace = true }
bytesize = { workspace = true }
clap = { workspace = true, features = ["derive"] }
futures = { workspace = true }
garage-door = { workspace = true, optional = true }
log = { workspace = true }
mime = { workspace =  true }
rand = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
utoipa = { workspace = true, features = ["actix_extras", "yaml"] }
utoipa-actix-web = { workspace = true }
utoipa-rapidoc = { workspace = true }
utoipa-redoc = { workspace = true }

[dev-dependencies]
urlencoding = { workspace = true }
test-context = { workspace = true }
test-log = { workspace = true, features = ["log", "trace"] }
trustify-test-context = { workspace = true }

[build-dependencies]
build-info-build = { workspace = true }
