[package]
name = "trustify-test-context"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
trustify-common = { workspace = true }
trustify-migration = { workspace = true }
trustify-module-ingestor = { workspace = true }
trustify-module-storage = { workspace = true }

anyhow = { workspace = true }
futures = { workspace = true }
liblzma = { workspace = true }
log = { workspace = true }
postgresql_embedded = { workspace = true }
test-context = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
#chrono = { workspace = true }
#rand = { workspace = true }
#rstest = { workspace = true }
#serde_json = { workspace = true }
test-log = { workspace = true, features = ["log", "trace"] }
#time = { workspace = true, features = ["macros"] }
#tokio = { workspace = true, features = ["full"] }
