[package]
name = "trustify-test-context"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
trustify-common = { workspace = true }
trustify-migration = { workspace = true }
trustify-module-ingestor = { workspace = true }
trustify-module-storage = { workspace = true }

anyhow = { workspace = true }
futures = { workspace = true }
liblzma = { workspace = true }
log = { workspace = true }
peak_alloc = { workspace = true }
postgresql_embedded = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
test-context = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
test-log = { workspace = true, features = ["log", "trace"] }
osv = { workspace = true, features = ["schema"] }
hex = { workspace = true }
