[package]
name = "trustify-test-context"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
trustify-auth = { workspace = true }
trustify-common = { workspace = true }
trustify-migration = { workspace = true }
trustify-module-ingestor = { workspace = true }
trustify-module-storage = { workspace = true }

actix-http = { workspace = true }
actix-web = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
liblzma = { workspace = true }
log = { workspace = true }
peak_alloc = { workspace = true }
postgresql_embedded = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
spdx-rs = { workspace = true }
test-context = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
utoipa-actix-web = { workspace = true }

[dev-dependencies]
test-log = { workspace = true, features = ["log", "trace"] }
osv = { workspace = true, features = ["schema"] }
hex = { workspace = true }
