[package]
name = "trustify-trustd"
version = "0.1.0-alpha.1"
edition = "2021"

[[bin]]
name = "trustd"
path = "src/main.rs"

[dependencies]
trustify-common = { workspace = true }
trustify-module-importer = { workspace = true }
trustify-infrastructure = { workspace = true }
trustify-server = { workspace = true, default-features = false }

anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
log = { workspace = true }
postgresql_embedded = { workspace = true }
tokio = { workspace = true, features = ["full"] }
url = { workspace = true }

openssl = "*"

[features]
default = ["ui"]

ui = ["trustify-server/ui"]
garage-door = ["trustify-server/garage-door"]

vendored = [
    "openssl/vendored",
]
pm = [
    "garage-door",
    "ui"
]
