[package]
name = "trustify-trustd"
version = "0.1.0-alpha.2"
edition = "2021"

[[bin]]
name = "trustd"
path = "src/main.rs"

[dependencies]
trustify-common = { workspace = true }
trustify-module-importer = { workspace = true }
trustify-infrastructure = { workspace = true }
trustify-server = { workspace = true, default-features = false }

anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
log = { workspace = true }
postgresql_embedded = { workspace = true }
tokio = { workspace = true, features = ["full"] }
url = { workspace = true }

openssl = "*"
libz-sys = "*"

[features]
default = ["ui"]

ui = ["trustify-server/ui"]
garage-door = ["trustify-server/garage-door"]

vendored = [
    "openssl/vendored",
    # when using a vendored approach, we need to statically link zlib, otherwise we get some strange linker error
    #   unresolvable R_AARCH64_ADR_PREL_PG_HI21 relocation against symbol `__stack_chk_guard@@GLIBC_2.17'
    "libz-sys/static"
]
pm = [
    "garage-door",
    "ui"
]
