[package]
name = "trustify-trustd"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[[bin]]
name = "trustd"
path = "src/main.rs"

[dependencies]
trustify-common = { workspace = true }
trustify-module-analysis = { workspace = true }
trustify-module-importer = { workspace = true }
trustify-infrastructure = { workspace = true }
trustify-server = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
log = { workspace = true }
postgresql_embedded = { workspace = true }
tokio = { workspace = true, features = ["full"] }
openssl = { workspace = true }
libz-sys = { workspace = true }
liblzma = { workspace = true }

[dev-dependencies]
temp-env = { workspace = true }

[features]
default = ["pm"]

bundled = ["postgresql_embedded/bundled"]
garage-door = ["trustify-server/garage-door"]

vendored = [
    "openssl/vendored",
    # when using a vendored approach, we need to statically link zlib, otherwise we get some strange linker error
    #   unresolvable R_AARCH64_ADR_PREL_PG_HI21 relocation against symbol `__stack_chk_guard@@GLIBC_2.17'
    "libz-sys/static",
    "liblzma/static",
]
pm = [
    "garage-door",
    "bundled"
]
