[package]
name = "trustify-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
trustify-server = { path = "../server"}
trustify-importer = { path = "../importer"}

anyhow = "1.0.72"
clap = { version = "4", features = [ "derive", "env" ] }
env_logger = "0.10.0"
log = "0.4.19"
serde_json = "1.0.104"
thiserror = "1"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
pretty_assertions = "1.4.0"