[package]
name = "trustify-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#huevos-api = { path = "../api"}
anyhow = "1.0.72"
clap = { version = "4", features = ["derive", "env"] }
log = "0.4.19"
env_logger = "0.10.0"
serde_json = "1.0.104"
thiserror = "1"
serde = { version = "1.0.183", features = ["derive"] }
packageurl = "0.3.0"
lenient_semver = "0.4.2"
sea-orm = { version = "0.12", features = ["sea-query-binder", "sqlx-postgres", "runtime-tokio-rustls", "macros"] }
cpe = "0.1.3"

[dev-dependencies]
serde_json = "1.0.104"
