[package]
name = "trustify-server"
version = "0.1.0"
edition = "2021"

[dependencies]
trustify-api = { path = "../api"}
trustify-common = { path = "../common"}

actix-web = "4"
anyhow = "1.0.72"
clap = { version = "4", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.19"
packageurl = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.68", features = [ "raw_value" ] }
thiserror = "1"
utoipa = { version = "4", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "4", features = ["actix-web"] }

[dev-dependencies]
url-escape = "0.1.1"
