[package]
name = "trustify-auth"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
description = "Authentication and authorization functionality"

[dependencies]
trustify-common = { workspace = true }

actix-http = { workspace = true, optional = true }
actix-web = { workspace = true, optional = true }
actix-web-extras = { workspace = true, optional = true }
actix-web-httpauth = { workspace = true, optional = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
biscuit = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
futures-util = { workspace = true }
humantime = { workspace = true }
jsonpath-rust = { workspace = true }
log = { workspace = true }
openid = { workspace = true }
reqwest = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_with = { workspace = true, features = ["macros"] }
serde_yml = { workspace = true }
strum = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
utoipa = { workspace = true, features = ["actix_extras"], optional = true }
utoipa-swagger-ui = { workspace = true, features = ["actix-web"], optional = true }

[features]
actix = ["actix-web", "actix-http", "actix-web-httpauth", "actix-web-extras"]
swagger = ["utoipa", "utoipa-swagger-ui", "actix"]
