[package]
name = "trustify-infrastructure"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
actix-cors = { workspace = true }
actix-tls = { workspace = true, features = ["openssl"] }
actix-web = { workspace = true, features = ["openssl"] }
actix-web-extras = { workspace = true }
actix-web-httpauth = { workspace = true }
anyhow = { workspace = true }
bytesize = { workspace = true }
clap = { workspace = true, features = ["derive", "env", "string"] }
futures = { workspace = true }
http = { workspace = true }
log = { workspace = true }
mime = { workspace = true }
openssl = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true, features = ["grpc-tonic"] }
opentelemetry_sdk = { workspace = true, features = ["metrics", "spec_unstable_metrics_views"] }
opentelemetry-instrumentation-actix-web = { workspace = true, features = ["metrics"] }
parking_lot = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive", "rc"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["time", "signal", "macros"] }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "ansi", "tracing-log"] }
url = { workspace = true }
utoipa = { workspace = true }
utoipa-actix-web = { workspace = true }
utoipa-rapidoc = { workspace = true }

trustify-auth = { workspace = true }
trustify-common = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
