[package]
name = "trustify-module-analysis"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
trustify-auth = { workspace = true }
trustify-common = { workspace = true }
trustify-entity = { workspace = true }
trustify-infrastructure = { workspace = true }

actix-http = { workspace = true }
actix-web = { workspace = true }
anyhow = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
petgraph = { workspace = true }
parking_lot= { workspace = true }
sea-orm = { workspace = true }
sea-query = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
utoipa = { workspace = true, features = ["actix_extras", "uuid"] }

[dev-dependencies]
actix-http = { workspace = true }
bytes = { workspace = true }
bytesize = { workspace = true }
chrono = { workspace = true }
cyclonedx-bom = { workspace = true }
hex = { workspace = true }
humantime = { workspace = true }
jsonpath-rust = { workspace = true }
log = { workspace = true }
petgraph = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
test-context = { workspace = true }
test-log = { workspace = true, features = ["log", "trace"] }
tokio-util = { workspace = true, features = ["full"] }
trustify-test-context = { workspace = true }
urlencoding = { workspace = true }
criterion = { workspace = true, features = ["html_reports", "async_tokio"] }
csaf = { workspace = true }
packageurl = { workspace = true }
zip = { workspace = true }




