[package]
name = "trustify-module-graph"
version = "0.1.0"
edition = "2021"

[dependencies]
trustify-auth = { workspace = true }
trustify-entity = { workspace = true }
trustify-common = { workspace = true }
trustify-migration = { workspace = true }
trustify-cvss = { workspace = true }
trustify-module-search = { workspace = true }

actix-web = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
cpe = { workspace = true }
csaf = { workspace = true }
env_logger = { workspace = true }
lenient_semver = { workspace = true }
log = { workspace = true }
packageurl = { workspace = true }
postgresql_embedded = { workspace = true, features = ["blocking", "bundled", "tokio"] }
sea-orm = { workspace = true, features = ["sea-query-binder", "sqlx-postgres", "runtime-tokio-rustls", "macros", "debug-print"] }
sea-orm-migration = { workspace = true }
sea-query = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
spdx-expression = { workspace = true }
spdx-rs = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
utoipa = { workspace = true, features = ["actix_extras"] }

[dev-dependencies]
humantime = "2"
rust-lzma = "0.6"
test-log = { workspace = true, features = ["env_logger", "trace"] }
trustify-module-ingestor = { workspace = true }

