[package]
name = "trustify-module-fetch"
version = "0.1.0"
edition = "2021"

[dependencies]
trustify-auth = { workspace = true }
trustify-entity = { workspace = true }
trustify-common = { workspace = true }
trustify-migration = { workspace = true }
trustify-cvss = { workspace = true }

actix-web = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
cpe = { workspace = true }
csaf = { workspace = true }
human-date-parser = { workspace = true }
lenient_semver = { workspace = true }
log = { workspace = true }
packageurl = { workspace = true }
postgresql_embedded = { workspace = true, features = ["blocking", "bundled", "tokio"] }
regex = { workspace = true }
sea-orm = { workspace = true, features = ["sea-query-binder", "sqlx-postgres", "runtime-tokio-rustls", "macros", "debug-print"] }
sea-orm-migration = { workspace = true }
sea-query = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
spdx-expression = { workspace = true }
spdx-rs = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
utoipa = { workspace = true, features = ["actix_extras"] }

[dev-dependencies]
chrono = { workspace = true }
humantime = { workspace = true }
jsonpath-rust = { workspace = true }
rust-lzma = { workspace = true }
test-log = { workspace = true, features = ["log", "trace"] }
trustify-module-ingestor = { workspace = true }
trustify-module-storage = { workspace = true }
test-context = { workspace = true }
urlencoding = { workspace = true }
tokio-util = { workspace = true }
actix-http = { workspace = true }