[package]
name = "trustify-module-fetch"
version = "0.1.0"
edition = "2021"

[dependencies]
trustify-auth = { workspace = true }
trustify-entity = { workspace = true }
trustify-common = { workspace = true }

actix-web = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
sea-orm = { workspace = true, features = ["sea-query-binder", "sqlx-postgres", "runtime-tokio-rustls", "macros", "debug-print"] }
sea-query = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
utoipa = { workspace = true, features = ["actix_extras"] }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
chrono = { workspace = true }
humantime = { workspace = true }
jsonpath-rust = { workspace = true }
rust-lzma = { workspace = true }
test-log = { workspace = true, features = ["log", "trace"] }
trustify-module-ingestor = { workspace = true }
trustify-module-storage = { workspace = true }
test-context = { workspace = true }
urlencoding = { workspace = true }
tokio-util = { workspace = true }
actix-http = { workspace = true }