[package]
name = "trustify-module-fundamental"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
trustify-auth = { workspace = true }
trustify-common = { workspace = true }
trustify-cvss = { workspace = true }
trustify-entity = { workspace = true }
trustify-module-ingestor = { workspace = true }
trustify-module-storage = { workspace = true }

actix-http = { workspace = true }
actix-web = { workspace = true }
anyhow = { workspace = true }
async-graphql = { workspace = true, features = ["uuid", "time"] }
cpe = { workspace = true }
futures-util = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
sea-orm = { workspace = true }
sea-query = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
spdx = { workspace = true, features = ["text"] }
strum = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
utoipa = { workspace = true, features = ["actix_extras", "uuid"] }
uuid = { workspace = true }
walker-common = { workspace = true, features = ["liblzma"] }

[dev-dependencies]
actix-http = { workspace = true }
bytes = { workspace = true }
bytesize = { workspace = true }
chrono = { workspace = true }
cyclonedx-bom = { workspace = true }
hex = { workspace = true }
humantime = { workspace = true }
jsonpath-rust = { workspace = true }
log = { workspace = true }
serde_json = { workspace = true }
spdx-rs = { workspace = true }
sha2 = { workspace = true }
test-context = { workspace = true }
test-log = { workspace = true, features = ["log", "trace"] }
tokio-util = { workspace = true }
trustify-cvss = { workspace = true }
trustify-test-context = { workspace = true }
urlencoding = { workspace = true }
criterion = { workspace = true, features = ["html_reports", "async_tokio"] }
csaf = { workspace = true }
packageurl = { workspace = true }
zip = { workspace = true }

[[bench]]
name = "bench"
path = "benches/bench.rs"
harness = false


