[package]
name = "trustify-module-fundamental"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[features]
default = []
graphql = [ "async-graphql" ]

[dependencies]
trustify-auth = { workspace = true }
trustify-common = { workspace = true}
trustify-cvss = { workspace = true }
trustify-entity = { workspace = true }
trustify-module-analysis = { workspace = true }
trustify-module-ingestor = { workspace = true }
trustify-module-storage = { workspace = true }
trustify-query = { workspace = true }
trustify-query-derive = { workspace = true }

actix-http = { workspace = true }
actix-web = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
cpe = { workspace = true }
csv = { workspace = true }
flate2 ={ workspace = true }
futures-util = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
sanitize-filename = { workspace = true }
sea-orm = { workspace = true }
sea-query = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
spdx = { workspace = true, features = ["text"] }
spdx-expression = { workspace = true }
strum = { workspace = true }
tar = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-futures = { workspace = true, features = ["futures-03"] }
utoipa = { workspace = true, features = ["actix_extras", "uuid", "time"] }
utoipa-actix-web = { workspace = true }
uuid = { workspace = true }

async-graphql = { workspace = true, features = ["uuid", "time"], optional = true }

[dev-dependencies]
actix-http = { workspace = true }
bytes = { workspace = true }
bytesize = { workspace = true }
chrono = { workspace = true }
criterion = { workspace = true, features = ["html_reports", "async_tokio"] }
csaf = { workspace = true }
csv = { workspace = true }
cve = { workspace = true }
flate2 = { workspace = true }
hex = { workspace = true }
humantime = { workspace = true }
jsonpath-rust = { workspace = true }
log = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true, features = ["grpc-tonic"] }
opentelemetry_sdk = { workspace = true }
osv = { workspace = true }
packageurl = { workspace = true }
regex = { workspace = true }
roxmltree = { workspace = true }
sanitize-filename = { workspace = true }
semver = { workspace = true }
serde-cyclonedx = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }
sha2 = { workspace = true }
spdx-rs = { workspace = true }
strum = { workspace = true }
tar = { workspace = true }
test-context = { workspace = true }
test-log = { workspace = true, features = ["log", "trace"] }
tokio-util = { workspace = true }
tracing = { workspace = true, features = ["std"]}
tracing-core =  { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-test = { workspace = true }
trustify-cvss = { workspace = true }
trustify-test-context = { workspace = true }
urlencoding = { workspace = true }
walkdir = { workspace = true }
zip = { workspace = true }

[[bench]]
name = "bench"
path = "benches/bench.rs"
harness = false

[[bench]]
name = "bench-otel"
path = "benches/bench-otel.rs"
harness = false

