[package]
name = "trustify-module-graphql"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
trustify-entity = { workspace = true }
trustify-auth = { workspace = true }
trustify-common = { workspace = true }
trustify-infrastructure = { workspace = true }
trustify-module-importer = { workspace = true }
trustify-module-ui = { workspace = true }
trustify-module-fundamental = { workspace = true }
trustify-module-ingestor = { workspace = true }

anyhow = { workspace = true }
async-graphql = { workspace = true }
async-graphql-actix-web = { workspace = true }
actix-web = { workspace = true }
clap = { workspace = true, features = ["derive"] }
log = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
test-context = { workspace = true }
trustify-test-context = { workspace = true }
test-log = { workspace = true, features = ["log", "trace"] }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
